--- a/about.html
+++ b/about.html
@@ -6,15 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a href="/index.html" class="link"> <li>Home</li></a>
-            <a href="/about.html" class="link"> <li>About</li></a>
-            <a href="/contact.html" class="link"> <li>Contact</li></a>
+            <a href="./index.html" class="link"> <li>Home</li></a>
+            <a href="./about.html" class="link"> <li>About</li></a>
+            <a href="./contact.html" class="link"> <li>Contact</li></a>
             
         </ul>
     </nav>
@@ -33,28 +33,28 @@
         </div>
         <div class="row">
             <div class="column">
-                <img src="/img/renato-marzan-xrMXQbG2LkM-unsplash.jpg" alt="mainst"
+                <img src="./img/renato-marzan-xrMXQbG2LkM-unsplash.jpg" alt="mainst"
             style="width:100%">
          </div>
             <div class="column">
-                <img src="img/travis-gergen-DUgYdLxVEPM-unsplash.jpg" alt="castle"
+                <img src="./img/travis-gergen-DUgYdLxVEPM-unsplash.jpg" alt="castle"
                 style="width: 100%;">
             </div>
             <div class="column">
-             <img src="/img/bradley-singleton-T8sGNx4Vnq4-unsplash.jpg" alt="toontown"
+             <img src="./img/bradley-singleton-T8sGNx4Vnq4-unsplash.jpg" alt="toontown"
              style="width: 100%">
              </div>
                 <div class="row2">
                     <div class="column2">
-                     <img src="/img/simone-w-Fo_xIxh8OFg-unsplash.jpg" alt="pixar"
+                     <img src="./img/simone-w-Fo_xIxh8OFg-unsplash.jpg" alt="pixar"
                     style="width: 100%;">
                      </div>
                     <div class="column2">
-                    <img src="/img/daniela-araya-3dTvrda0IxA-unsplash.jpg" alt="cars"
+                    <img src="./img/daniela-araya-3dTvrda0IxA-unsplash.jpg" alt="cars"
                     width="100%">
                     </div>
                     <div class="column2">
-                     <img src="/img/tjcl.jpg" alt="tj"
+                     <img src="./img/tjcl.jpg" alt="tj"
                      width="100%">
                     </div>
                     </div>
