--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a href="/index.html"><li>Home</li></a>
-            <a href="/about.html"><li>About</li></a>
-            <a href="/contact.html"><li>Contact</li></a>
+            <a href="./index.html"><li>Home</li></a>
+            <a href="./about.html"><li>About</li></a>
+            <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </nav>
     <div class="firework" id="firework1">
