--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <title>Document</title>
 </head>
 <body>
     <nav>
         <ul>
-            <a href="/index.html" class="link"> <li>Home</li></a>
-            <a href="/about.html" class="link"> <li>About</li></a>
-            <a href="/contact.html"class= "link"> <li>Contact</li></a>
+            <a href="./index.html" class="link"> <li>Home</li></a>
+            <a href="./about.html" class="link"> <li>About</li></a>
+            <a href="./contact.html"class= "link"> <li>Contact</li></a>
         </ul>
     </nav>
    <div class="container showcase-inner img center">
-       <img src="/img/IMG_0101.jpg" alt="ballon" 
+       <img src="./img/IMG_0101.jpg" alt="ballon" 
        style="width: 100%;">
    </div>
    <div class="button">
